--- a/HTML/login.html
+++ b/HTML/login.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="../CSS/login.css">
 </head>
 <body>
-    <div id="restart_load"></div>
-    <div id="power_off_load"></div>
+    <h3 id="restart_load"></h3>
+    <h3 id="power_off_load"></h3>
     <div class="login">
         <form>
             <img src="../MEDIA/IMAGE/user.jpg" alt=""><br><br>
             <label for="Admin">ADMIN</label><br><br>
-            <input type="password" id="pwd"><br><br>
+            <input type="password" id="pwd"><br>
             <p id="text" style="color: red; font-size:20px;">&nbsp;</p><br>
             <button onclick="login()">Login</button>
         </form>
