--- a/HTML/desktop.html
+++ b/HTML/desktop.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="../CSS/desktop.css">
 </head>
 <body>
-    
+
+    <div class="footer">
+        <div class="left">
+            <button type="button" id="power_btn" onclick="powerOptions()">Power</button>
+            <button type="button" id="restart" onclick="restart()">Restart</button>
+        </div>
+        <div class="right">
+            <p id="date_time"></p>
+        </div>
+    </div>
+    <script src="../JS/desktop.js"></script>
 </body>
 </html>
