--- a/HTML/login.html
+++ b/HTML/login.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../CSS/login.css">
 </head>
 <body>
-    
+
     <div class="login">
         <form action="./desktop.html">
             <img src="../MEDIA/IMAGE/user.jpg" alt=""><br><br>
-            <label for="Admin">Enter User Name</label><br><br>
+            <label for="Admin">Enter Your Name</label><br><br>
             <input type="text" id="user_name"><br>
             <p id="text" style="color: red; font-size:20px;">&nbsp;</p><br>
             <button onclick="login()">Login</button>
